# karaoke_flutter_picow

./: README.md
flutter/: blecontroller.dart  build.gradle  main.dart
picow/: CMakeLists.txt  ble.c  karaoke_ir.c
